--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "STest",
+  "name": "stest",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,13 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@op-engineering/op-sqlite": "^15.2.2",
     "@react-native/new-app-screen": "0.83.1",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
     "react": "19.2.0",
     "react-native": "0.83.1",
     "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.19.0"
+    "react-native-screens": "^4.19.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
