feat: add initial seeding
use batching for all migrations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "types": ["jest"],
     "strict": true,
     "moduleResolution": "bundler",
+    "resolveJsonModule": true,
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["**/node_modules", "**/Pods"]
