add orderbook item query test
add path alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,10 @@
     "strict": true,
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+    }
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["**/node_modules", "**/Pods"]
