--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
     "@react-native/metro-config": "0.83.1",
     "@react-native/typescript-config": "0.83.1",
     "@tanstack/eslint-plugin-query": "^5.91.2",
+    "@testing-library/react-native": "^13.3.3",
     "@types/better-sqlite3": "^7.6.13",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.2.0",
     "@types/react-test-renderer": "^19.1.0",
     "babel-plugin-inline-import": "^3.0.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "better-sqlite3": "^12.6.0",
+    "cross-env": "^10.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
